force-app/main/default/objects/Financial_Accounts__c/Financial_Accounts__c.object-meta.xml
<CustomObject>
    <label>Financial Accounts</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Accounts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>