force-app/main/default/objects/Financial_Accounts__c/fields/Account_Wealth_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Account_Wealth_Indicator__c</fullName>
    <label>Account Wealth Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>