force-app/main/default/objects/Financial_Accounts__c/fields/Acct_Nbr_Ref_Txt__c.field-meta.xml
<CustomField>
    <fullName>Acct_Nbr_Ref_Txt__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Acct Nbr Ref Txt</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>