force-app/main/default/objects/Financial_Accounts__c/fields/Created_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Formula__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date (Formula)</label>
    <type>Date</type>
</CustomField>