force-app/main/default/objects/Financial_Accounts__c/fields/Current_Officer_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Officer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Officer Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Financial_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>