force-app/main/default/objects/Financial_Accounts__c/fields/Current_Principle_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Principle_Balance__c</fullName>
    <inlineHelpText>This balance may not reflects the Customer&#39;s actual balance as there is a 48 hour lag in updating this field from the source system (Hogan Loans, Harland Loans, TBS, etc).</inlineHelpText>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>