force-app/main/default/objects/Financial_Accounts__c/fields/I_am_Current_Officer__c.field-meta.xml
<CustomField>
    <fullName>I_am_Current_Officer__c</fullName>
    <formula>Current_Officer_Name__r.Id=$User.Id</formula>
    <label>I am Current Officer</label>
    <type>Checkbox</type>
</CustomField>