force-app/main/default/objects/Financial_Accounts__c/fields/Primary_Customer__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Accounts</relationshipLabel>
    <relationshipName>Financial_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>