force-app/main/default/objects/Financial_Accounts__c/fields/Restricted_Account__c.field-meta.xml
<CustomField>
    <fullName>Restricted_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Restricted Account</label>
    <type>Checkbox</type>
</CustomField>