force-app/main/default/objects/Financial_Accounts__c/recordTypes/Business_Checking.recordType-meta.xml
<RecordType>
    <fullName>Business_Checking</fullName>
    <active>true</active>
    <label>Business Checking</label>
</RecordType>