force-app/main/default/objects/Financial_Accounts__c/recordTypes/Business_LOC.recordType-meta.xml
<RecordType>
    <fullName>Business_LOC</fullName>
    <active>true</active>
    <label>Business LOC</label>
</RecordType>