force-app/main/default/objects/Financial_Accounts__c/recordTypes/Business_Savings.recordType-meta.xml
<RecordType>
    <fullName>Business_Savings</fullName>
    <active>true</active>
    <label>Business Savings</label>
</RecordType>