force-app/main/default/objects/Financial_Accounts__c/recordTypes/CD.recordType-meta.xml
<RecordType>
    <fullName>CD</fullName>
    <active>true</active>
    <label>CD</label>
</RecordType>