force-app/main/default/objects/Financial_Accounts__c/recordTypes/Commercial_Credit_Card.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Credit_Card</fullName>
    <active>true</active>
    <label>Commercial Credit Card</label>
</RecordType>