force-app/main/default/objects/Financial_Accounts__c/recordTypes/Consumer_Checking.recordType-meta.xml
<RecordType>
    <fullName>Consumer_Checking</fullName>
    <active>true</active>
    <label>Consumer Checking</label>
</RecordType>