force-app/main/default/objects/Financial_Accounts__c/recordTypes/Consumer_Credit_Card.recordType-meta.xml
<RecordType>
    <fullName>Consumer_Credit_Card</fullName>
    <active>true</active>
    <label>Consumer Credit Card</label>
</RecordType>