force-app/main/default/objects/Financial_Accounts__c/recordTypes/Consumer_Loan.recordType-meta.xml
<RecordType>
    <fullName>Consumer_Loan</fullName>
    <active>true</active>
    <label>Consumer Loan</label>
</RecordType>