force-app/main/default/objects/Financial_Accounts__c/recordTypes/Consumer_LOC.recordType-meta.xml
<RecordType>
    <fullName>Consumer_LOC</fullName>
    <active>true</active>
    <label>Consumer LOC</label>
</RecordType>