force-app/main/default/objects/Financial_Accounts__c/recordTypes/Consumer_Savings.recordType-meta.xml
<RecordType>
    <fullName>Consumer_Savings</fullName>
    <active>true</active>
    <label>Consumer Savings</label>
</RecordType>