force-app/main/default/objects/Financial_Accounts__c/recordTypes/Retirement.recordType-meta.xml
<RecordType>
    <fullName>Retirement</fullName>
    <active>true</active>
    <label>Retirement</label>
</RecordType>