force-app/main/default/objects/Financial_Accounts__c/recordTypes/Safe_Deposit_Box.recordType-meta.xml
<RecordType>
    <fullName>Safe_Deposit_Box</fullName>
    <active>true</active>
    <label>Safe Deposit Box</label>
</RecordType>