force-app/main/default/objects/Financial_Accounts__c/recordTypes/Unsecured_Consumer_Loan.recordType-meta.xml
<RecordType>
    <fullName>Unsecured_Consumer_Loan</fullName>
    <active>true</active>
    <label>UCL</label>
</RecordType>